@@ -51,6 +51,7 @@
     + Wrong unit location for dual-sided racks (#3086);
     + Linked ip_addr shows integer notation (#3100);
     + Invalid scan type () error (#2785);
+    + Invalid CSRF cookie editing rack items (#2556);
     + API:
         + Fixed /user/ calls for SSL with app code (static app code);
         + Address IP field not displayed when using filter_by (#2934);
